# inplace_format

./: CMakeLists.txt  LICENSE  README.md  benchmark.cpp  example.cpp  infmt.hpp  test.cpp
